// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PodsMetrics should match snapshot with data 1`] = `
<div>
  <div
    class="border rounded"
  >
    <table
      class="table-fixed min-w-full divide-y divide-neutral-200 text-sm text-neutral-400 w-full"
    >
      <thead>
        <tr>
          <th
            class="px-4 py-2 text-left font-medium w-1/2"
          >
            Instance name
          </th>
          <th
            class="px-4 py-2 text-left font-medium"
          >
            RAM usage
          </th>
          <th
            class="px-4 py-2 text-left font-medium"
          >
            vCPU
          </th>
          <th
            class="px-4 py-2 text-left font-medium"
          >
            Storage
          </th>
        </tr>
      </thead>
      <tbody
        class="divide-y divide-neutral-200"
      >
        <tr>
          <td
            class="px-4 py-2"
          >
            foobar
          </td>
          <td
            class="px-4 py-2"
          >
            20
            %
          </td>
          <td
            class="px-4 py-2"
          >
            5
            %
          </td>
          <td
            class="px-4 py-2"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`PodsMetrics should match snapshot with empty data 1`] = `
<div>
  <div
    class="border rounded"
  >
    <table
      class="table-fixed min-w-full divide-y divide-neutral-200 text-sm text-neutral-400 w-full"
    >
      <thead>
        <tr>
          <th
            class="px-4 py-2 text-left font-medium w-1/2"
          >
            Instance name
          </th>
          <th
            class="px-4 py-2 text-left font-medium"
          >
            RAM usage
          </th>
          <th
            class="px-4 py-2 text-left font-medium"
          >
            vCPU
          </th>
          <th
            class="px-4 py-2 text-left font-medium"
          >
            Storage
          </th>
        </tr>
      </thead>
      <tbody
        class="divide-y divide-neutral-200"
      >
        <tr>
          <td
            class="px-4 py-2"
          >
            -
          </td>
          <td
            class="px-4 py-2"
          >
            -
          </td>
          <td
            class="px-4 py-2"
          >
            -
          </td>
          <td
            class="px-4 py-2"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`PodsMetrics should match snapshot with null data 1`] = `<div />`;
